# ThingJS-front

./: .babelrc  .eslintrc.js  .gitignore  CMakeLists.txt  README.md  deploy.c  deploy.h  fake.c  front_deploy.c  front_deploy.h  github  github.pub  package-lock.json  package.json  platform.html
config/: dev.env.js  index.js  prod.env.js
doc/sсheme/: Application architecture.drawio  Application bundle.drawio  Application interfaces.drawio  Developing.drawio  General architecture.drawio  Сollaboration.drawio
release/: platform.html
src/: Root.vue  main.js
src/applications/ante/: Ante.vue  consts.js  index.js  langs.js  manifest.json  utils.js
src/applications/blink/: Blink.vue  blink.js  langs.js  manifest.json
src/applications/clock/: Clock.vue  clock.js  langs.js  manifest.json
src/applications/ds18x20/: DS18X20.vue  ds18x20.js  langs.js  manifest.json
src/applications/http/: Http.vue  http.js  langs.js  manifest.json
src/applications/lucerna/: App.vue  basis.js  langs.js  manifest.json  prefs.js  scheduler.js  storage.js  utils.js
src/applications/lucerna2/: App.vue  index.js  manifest.json
src/applications/mqtt/: MQTT.vue  langs.js  manifest.json  mqtt.js
src/applications/nodered/: NodeRed.vue  langs.js  manifest.json  nodered.js
src/applications/storage/: Storage.vue  langs.js  manifest.json  storage.js
src/assets/: fonts.css  material_icons.css
src/core/: applications.js  bus.vue  consts.js  dev-bus.vue  mixins.js  storage-binary.js  storage-collector.js  storage-object.js  storage.js
src/router/: index.js
(+51 files in other folders)
